[gd_scene load_steps=8 format=3 uid="uid://vjvjwwno5kjk"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_4oguv"]

[sub_resource type="LabelSettings" id="LabelSettings_bsmxl"]
font_size = 48

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ghkrw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ih3w3"]
bg_color = Color(0.513726, 0.647059, 0.596078, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_114gi"]
bg_color = Color(0.270588, 0.521569, 0.533333, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im5i8"]
bg_color = Color(0.984314, 0.286275, 0.203922, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qw0o"]
bg_color = Color(0.8, 0.141176, 0.113725, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4oguv")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -212.0
offset_top = -105.0
offset_right = 212.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BAÅžLIK"
label_settings = SubResource("LabelSettings_bsmxl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ghkrw")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 16

[node name="NewGameButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_ih3w3")
theme_override_styles/normal = SubResource("StyleBoxFlat_114gi")
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 32
disabled = true
text = "Load Game (WIP)"

[node name="SettingsButton" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_im5i8")
theme_override_styles/normal = SubResource("StyleBoxFlat_5qw0o")
text = "Settings"

[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
